tests/negative/test_call_arg_non_owning_param_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc bar (f:Foo) () {};

fnc baz (f:Foo::noDrop) () {
    bar f;
};

fnc main () () {
};